--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div>
         <header>
             <h1>LDRobillard.com</h1>
+            <div class="logo">
+                <img class="normal" src="img/logo.png" alt="Logo"/>
+                <img class="white" src="img/logo_white.png" alt="Logo"/>
+            </div>
         </header>
         <div id="main">
             <section id="personnal-info">
