Corrections des textes dans l'index

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                         <p class="title">Développeur</p>
                         <p class="employer">Société Grics</p>
                         <p class="duration">2015 - En cours...</p>
-                        <pre class="description">Développement d’une applications web d’envergure et mise en place d’une architecture de micro service et d’apis avec l’utilisation de la plateforme Microsoft Azure pour la mise en place des systèmes.
+                        <pre class="description">Développement d’une applications web d’envergure et mise en place d’une architecture de micro-services et d’apis avec l’utilisation de la plateforme Microsoft Azure pour la mise en place des systèmes.
 Utilisation d’AngularJS et de ASP.NET WebAPI pour le développement de l’application. 
-Participation active à la mise en place de l'Architecture de la nouvelle solution de la compagnie. 
-sRéférence pour les questions de frontend, particuliairement ce qui concer AngularJs et Javascript.
+Participation active à la mise en place de l'architecture de la nouvelle solution de la compagnie. 
+Référence pour les questions de frontend, particulièrement ce qui concerne AngularJS et Javascript.
                         </pre>
                     </li>
                     <li class="job">
