Added Lateral Menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
                 <img class="normal" src="img/logo.png" alt="Logo"/>
                 <img class="white" src="img/logo_white.png" alt="Logo"/>
             </div>
+            <nav>
+                <button onclick="document.body.classList.toggle('nav-active')"><span>Afficher la navigation</span><span></span><span></span></button>
+                <ul>
+                    <li class="section-title">Projets et autres</li>
+                    <li><a>Calculateur de revêtement</a></li>
+                </ul>
+            </nav>            
+            <span class="overlay"  onclick="document.body.classList.toggle('nav-active')"></span>
         </header>
         <div id="main">
             <section id="personnal-info">
