Menu overlay update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a>Calculateur de revêtement</a></li>
                 </ul>
             </nav>            
-            <span class="overlay"  onclick="document.body.classList.toggle('nav-active')"></span>
+            <span class="overlay"  onclick="document.body.classList.remove('nav-active')"></span>
         </header>
         <div id="main">
             <section id="personnal-info">
