Delete deprecated style, html an js

--- a/index.html
+++ b/index.html
@@ -24,37 +24,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.7/jquery.fullPage.min.css">
-	<link rel="stylesheet" href="css/style.v2.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<div>
-		<!--<header>
-            <h1>LDRobillard.com</h1>
-            <div class="logo">
-                <a href="/">
-                    <img class="normal" src="img/logo.png" alt="Logo"/>
-                    <img class="white" src="img/logo_white.png" alt="Logo"/>
-                </a>
-            </div>
-            <nav>
-                <button onclick="document.body.classList.toggle('nav-active')"><span>Afficher la navigation</span><span></span><span></span></button>
-                <ul>
-                    <li><a href="/">Accueil</a></li>
-                    <li class="section-title">Projets et autres</li>
-                    <li><a href="/calculateur">Calculateur de revêtement</a></li>
-                </ul>
-            </nav>            
-            <span class="overlay"  onclick="document.body.classList.remove('nav-active')"></span>
-        </header>-->
 		<div id="main" ng-view></div>
-		<!--<footer>
-            <div>
-                <div class="copyright">
-                    <p>Tous droits réservés par l'auteur. ©<span id="copyright-date"></span></p>
-                </div>
-            </div>
-        </footer>-->
 	</div>
 	<!-- Libraries -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
