--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
     
-	<script type="text/javascript" src="node_modules\angular-fullpage.js\angular-fullpage.min.js"></script>
+	<script type="text/javascript" src="vendor\angular-fullpage.min.js"></script>
 
 
 	<!-- Page scripts -->
