Fix some navigation behavior

--- a/app/feature/resume/resume.html
+++ b/app/feature/resume/resume.html
@@ -1,4 +1,11 @@
 <div>
+	<ul id="menu">
+		<li data-menuanchor="section_1"><a></a></li>
+		<li data-menuanchor="section_2"><a></a></li>
+		<li data-menuanchor="section_3"><a></a></li>
+		<li data-menuanchor="section_4"><a></a></li>
+		<li data-menuanchor="section_5"><a></a></li>
+	</ul>
 	<div full-page options="$ctrl.fullpageOptions">
 		<div class="section" id="profile">
 			<div class="section-content">
@@ -6,7 +13,6 @@
 				<div class="photo">
 					<img src="img/profile-picture.jpg" alt="Photo de profil">
 				</div>
-				<button class="btn-show-next" onclick="$.fn.fullpage.moveSectionDown();"><span>Suivant</span></button>
 			</div>
 		</div>
 		<div class="section" id="competences">
@@ -57,7 +63,6 @@
 						</ul>
 					</li>
 				</ul>
-				<button class="btn-show-next" onclick="$.fn.fullpage.moveSectionDown();"><span>Suivant</span></button>
 			</div>
 		</div>
 		<div class="section" id="experiences">
@@ -88,7 +93,6 @@
 						<p class="duration">2014 - 2015</p>
 					</li>
 				</ul>
-				<button class="btn-show-next" onclick="$.fn.fullpage.moveSectionDown();"><span>Suivant</span></button>
 			</div>
 		</div>
 		<div class="section" id="scholarship">
@@ -106,7 +110,6 @@
 						<p class="duration">2012</p>
 					</li>
 				</ul>
-				<button class="btn-show-next" onclick="$.fn.fullpage.moveSectionDown();"><span>Suivant</span></button>
 			</div>
 		</div>
 		<div class="section" id="contact">
