--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="vendor/jquery.fullPage.min.css">
+	<link rel="stylesheet" type="text/css" href="vendor/jquery.fullpage.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -46,7 +46,7 @@
 	<!-- Libraries -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-	<script type="text/javascript" src="vendor/jquery.fullPage.js"></script>
+	<script type="text/javascript" src="vendor/jquery.fullpage.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
